--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/CheckList.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta property=„og:image” content=%PUBLIC_URL%/CheckList.png>
-  <link rel="icon" href="%PUBLIC_URL%/CheckList.png">
+  <meta property=„og:image” content=%PUBLIC_URL%/CheckList.png />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
